# linkr

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
deploy/kubernetes/base/: deployment.yaml  externalsecret.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  networkpolicy.yaml  pdb.yaml  service.yaml  serviceaccount.yaml
deploy/kubernetes/overlays/production/: hpa.yaml  ingress-host.yaml  kustomization.yaml  namespace.yaml  scale-and-resources.yaml
deploy/kubernetes/overlays/staging/: ingress-host.yaml  kustomization.yaml  namespace.yaml  replicas.yaml
docs/: architecture.md  deployment.md  local-development.md  runbook.md
docs/adr/: 0001-record-architecture-decisions.md  0002-short-code-generation.md  0003-datastores-postgres-redis.md  0004-runtime-eks-on-aws.md  0005-best-effort-click-analytics.md
infra/terraform/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
migrations/: env.py  script.py.mako
migrations/versions/: 0001_initial_schema.py
observability/: slo.md
observability/grafana/dashboards/: linkr.json
observability/prometheus/rules/: slo-alerts.yml
src/linkr/: cache.py  config.py  database.py  deps.py  main.py  metrics.py  models.py  schemas.py  service.py  shortcode.py
src/linkr/routers/: health.py  links.py  redirect.py
tests/: conftest.py  test_health.py  test_links.py  test_redirect.py
