[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "linkr"
version = "1.0.0"
description = "URL shortening and click-analytics service"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "gunicorn==23.0.0",
    "SQLAlchemy==2.0.36",
    "alembic==1.14.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "psycopg[binary]==3.2.3",
    "redis==5.2.1",
    "prometheus-client==0.21.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "httpx==0.28.1",
    "ruff==0.8.4",
    "bandit==1.8.0",
    "pip-audit==2.7.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q --cov=linkr --cov-report=term-missing --cov-report=xml"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["S101"]  # asserts are allowed in tests

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S105", "S106"]

[tool.bandit]
exclude_dirs = ["tests"]
